ISSUP-4239 Create REST API to extend license keys
